
** Bug fixes

  ls no longer prematurely wraps lines when printing short file names.
  [bug introduced in 5.1.0]

  shred again uses defined patterns for all iteration counts.
  [bug introduced in coreutils-5.93]

** New commands

  base32 is added to complement the existing base64 command,
  and encodes and decodes printable text as per RFC 4648.

** Changes in behavior

  base64 no longer supports hex or oct --wrap parameters,
  thus better supporting decimals with leading zeros.

  date --iso-8601 now uses +00:00 timezone format rather than +0000.
  The standard states to use this "extended" format throughout a timestamp.

  df now prefers sources towards the root of a device when
  eliding duplicate bind mounted entries.

** Improvements

  All utilities now quote user supplied arguments in error strings,
  which avoids confusing error messages in the presence of '\r' chars etc.

  md5sum now ensures a single line per file for status on standard output,
  by using a '\' at the start of the line, and replacing any newlines with '\n'.
  This also affects sha1sum, sha224sum, sha256sum, sha384sum and sha512sum.

  dircolors now supports globbing of TERM entries in its database.
  For example "TERM *256color*" is now supported.

  du no longer stats all mount points at startup, only doing so
  upon detection of a directory cycle.
  [issue introduced in coreutils-8.20]

  ls -w0 is now interpreted as no limit on the length of the outputted line.


* Noteworthy changes in release 8.24 (2015-07-03) [stable]

** Bug fixes

  dd supports more robust SIGINFO/SIGUSR1 handling for outputting statistics.
  Previously those signals may have inadvertently terminated the process.

  df --local no longer hangs with inaccessible remote mounts.
  [bug introduced in coreutils-8.21]

  du now silently ignores all directory cycles due to bind mounts.
  Previously it would issue a warning and exit with a failure status.