@@ -313,6 +313,7 @@ all_tests =					\
   tests/misc/printf-cov.pl			\
   tests/misc/printf-hex.sh			\
   tests/misc/printf-surprise.sh			\
+  tests/misc/printf-quote.sh			\
   tests/misc/pwd-long.sh			\
   tests/misc/readlink-fp-loop.sh		\
   tests/misc/readlink-root.sh			\
